--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     </section>
 
     <div class="icons">
-        <a href="https://www.linkedin.com/in/flavia-ayelen-copa-610592191/"><i class='bx bxl-linkedin-square'></i></a>
-        <a href="https://www.instagram.com/ayelencopa/"><i class='bx bxl-instagram-alt'></i></a>
-        <a href="https://github.com/aye451?tab=projects"><i class='bx bxl-github'></i></a>
+        <a href="https://www.linkedin.com/in/flavia-ayelen-copa-610592191/" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
+        <a href="https://www.instagram.com/ayelencopa/" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
+        <a href="https://github.com/aye451?tab=projects" target="_blank"><i class='bx bxl-github'></i></a>
     </div>
 
     <div class="scroll-down">
