Se agrego la descarga del CV

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             <p>Interesada por el mundo de la tecnología y los datos.
                 Estoy abierta a nuevas oportunidades y conexiones en el ámbito del análisis de datos y más allá!
             </p>
-            <a href="#">CV</a>
+            <!-- <a href="#">CV</a> -->
+            <button onclick= "downloadCV()">CV</button>
             <a href="#" class="videos"><i class='bx bx-play'></i>Mira mis videos</a>
         </div>
         <div class="hero-img">
